--- a/签名及请求说明.md
+++ b/签名及请求说明.md
@@ -15,7 +15,7 @@ API 访问密钥（key） 您申请的 APIKEY 中的Key。
 签名方法（Signature） 用户计算签名的基于哈希的协议，此处使用 MD5。
 例：MD5(key_用戶ID_secretKey_time)
 
-时间戳（time） 您发出请求的时间 (UTC 时区) (UTC 时区) (UTC 时区) 。在查询请求中包含此值有助于防止第三方截取您的请求。
+时间戳（time）当前时间的13位时间戳
 
 必选和可选参数 每个方法都有一组用于定义 API 调用的必需参数和可选参数。可以在每个方法的说明中查看这些参数及其含义。 请一定注意：对于GET请求，每个方法自带的参数都需要进行签名运算； 对于POST请求，每个方法自带的参数进行签名认证，即POST请求中需要将进行签名运算是Key、signature、time三个参数以及其它参数放在body中。
 
